# pytempscsp

./: .gitignore  .pylintrc  LICENSE.md  README.md  bandpass-blocks.ipynb  bandpass-riemann.ipynb  cymbal44.ipynb  kernelgraphs-ref.ipynb  kernelgraphs.ipynb  mkdocs.yml  pyproject.toml  sineexpwave.ipynb  tempscsp.py  tempscspdemo.ipynb  test_tempscsp.py  vibration.ipynb
.hg/: dirstate  last-message.txt  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.ipynb_checkpoints/: tempscspdemo-checkpoint.ipynb
docs/: README.md  about.md
figs/: blocks-DoE-band0.eps  blocks-DoE-band1.eps  blocks-DoE-band2.eps  blocks-DoE-band3.eps  blocks-DoE-last.eps  blocks-DoE-reconstr.eps  blocks-DoG-band0.eps  blocks-DoG-band1.eps  blocks-DoG-band2.eps  blocks-DoG-band3.eps  blocks-DoG-last.eps  blocks-DoG-reconstr.eps  blocks-DoT-band0.eps  blocks-DoT-band1.eps  blocks-DoT-band2.eps  blocks-DoT-band3.eps  blocks-DoT-last.eps  blocks-DoT-reconstr.eps  blocks.eps  cymbal44-der1-c2.eps  cymbal44-der1-csqrt2.eps  cymbal44-der2-c2.eps  cymbal44-der2-csqrt2.eps  cymbal44-quasi-c2.eps  cymbal44-quasi-csqrt2.eps  cymbal44.eps  limitkern-c2-der0-sigma1.eps  limitkern-c2-der0-sigma2.eps  limitkern-c2-der0-sigma4.eps  limitkern-c2-der1-sigma1.eps  limitkern-c2-der1-sigma2.eps  limitkern-c2-der1-sigma4.eps  limitkern-c2-der2-sigma1.eps  limitkern-c2-der2-sigma2.eps  limitkern-c2-der2-sigma4.eps  limitkern-csqrt2-der0-sigma1.eps  limitkern-csqrt2-der0-sigma2.eps  limitkern-csqrt2-der0-sigma4.eps  limitkern-csqrt2-der1-sigma1.eps  limitkern-csqrt2-der1-sigma2.eps  (+37 more)
pytempscsp/: __init__.py  bandpass.py  tempscsel.py  tempscsp.py
tests/: test_tempscsp.py
(+7 files in other folders)
